Updated URM and Config components.

--- a/rs/config/default.cfg
+++ b/rs/config/default.cfg
@@ -6,4 +6,6 @@ cfg_expresult_folder = /tmp/recsys/rs/result
 
 [cfg_seg_utils]
 cfg_utils_logfolder = /tmp/recsys/rs/logfiles
+cfg_utils_cache_dir = /tmp/recsys/rs/cache
+cfg_utils_use_cahce = True
 
